fixed spacing on social icons in footer

--- a/views/refbook.scss
+++ b/views/refbook.scss
@@ -492,7 +492,7 @@ html, body {
         }
     }
 
-    i {
+    .first {
         padding-right: 8px;
     }
 
